--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,13 @@
 #FROM python:3.8.0-stretch
 #拉取原始镜像
-#FROM centos
-FROM harbor102.test.ximalaya.com/test/ximalive-qa
+FROM centos
+#FROM harbor102.test.ximalaya.com/test
 #打上个人标签
 MAINTAINER dx_content<rou.zhang@ximalaya.com>
 #创建工作目录
 RUN mkdir -p /release
 # 拷贝当前目录所有的文件，进入 docker 镜像中
-ADD  ximalaya_live  /release
+ADD  ./ximalaya_live  /release
 #添加权限
 RUN #chmod u+x /release && sh /release
 RUN chmod u+x /release
